fixed instructions typo

--- a/experiments/2_Maze_Neutrality/experiment/experiment.html
+++ b/experiments/2_Maze_Neutrality/experiment/experiment.html
@@ -75,7 +75,7 @@
   <div class="slide" id="instructions">
 
 		<h3>Instructions</h3>
-    <p>On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which correspons to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
+    <p>On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which corresponds to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
 		<p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
     <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
@@ -155,7 +155,7 @@
 
   <h3>Let's Get Started!</h3>
   <p>Great job! Now we can really get started.</p>
-  <p><strong>To reiterate:</strong> On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which correspons to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
+  <p><strong>To reiterate:</strong> On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which corresponds to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
   <p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
   <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
