added additional instructional prompts in example trial, more specific information on the almost slide

--- a/experiments/2_Maze_Neutrality/experiment/experiment.html
+++ b/experiments/2_Maze_Neutrality/experiment/experiment.html
@@ -160,7 +160,7 @@
 
   <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
 
-  <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10mins.</p>
+  <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10mins. In this section, you will not get any hints, and if you continue a sentence ungrammatically, you will be taken to the start of the next sentence. Please pay attention!</p>
 
   <p> <strong> Press the spacebar to continue! </strong> </p>
 
