added second example trial, highlighting in first trial

--- a/experiments/2_Maze_Neutrality/experiment/experiment.html
+++ b/experiments/2_Maze_Neutrality/experiment/experiment.html
@@ -75,13 +75,13 @@
   <div class="slide" id="instructions">
 
 		<h3>Instructions</h3>
-    <p>On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which corresponds to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
+    <p>On the following pages, you will be asked to press SPACE to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which corresponds to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
 		<p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
     <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
 
     <p>If you're a bit confused, don't worry - we will start with an example!</p>
-    <p> <strong> Press the spacebar to continue! </strong> </p>
+    <p> <strong> Press SPACE to continue! </strong> </p>
 
 
   </div>
@@ -90,7 +90,7 @@
   <div class="slide" id="example">
 <div id = "stimuli">
 
-  <p class = "instructions" id="trial_instructions"> Press the spacebar to begin! </p>
+  <p class = "instructions" id="trial_instructions"> Press SPACE to begin! </p>
 
   <div class="correct">
     <br>
@@ -138,7 +138,7 @@
     <div class="err">
       <br>
       <p>
-       You've pressed the wrong word! Be careful! In the real experiment, pressing the illegal continuation will cause you to go on to the next task. Try again.
+       You've pressed the wrong word! Be careful! In the real experiment, pressing the illegal continuation will cause you to go on to the next task. Try again; we've highlighted the correct word.
       </p>
     </div>
 
@@ -151,18 +151,83 @@
 
  </div>
 
+ <!-- practice trial 2-->
+ <div class="slide" id="example2">
+<div id = "stimuli">
+
+ <p class = "instructions" id="trial_instructions2"> Press SPACE to begin; this time you won't get any hints! </p>
+
+ <div class="correct2">
+   <br>
+   <p id="ex_question_correct2">
+    Great job! Now please answer this question to continue.
+   </p>
+ </div>
+
+ <table style="font-family:monospace; margin-top:145px;font-size:36px;font-weight:bold" class="likertscale" id="attention-question-sample2">
+   <tr>
+     <td>
+       <p class = "center" id="attention-question-sample2"> </p>
+     </td>
+   </tr>
+ </table>
+
+ <table class="sidebyside">
+   <tr id="comprehension-question-answers-sample2">
+     <td class="structureleft">
+       <p style="font-family:monospace; margin-top:15px;font-size:36px;font-weight:bold" id="Yes_Sample2" value="Yes">Yes</p>
+     </td>
+     <td class="structureright">
+       <p style="font-family:monospace; margin-top:15px;font-size:36px;font-weight:bold" id="No_Sample2" value="No">No</p>
+     </td>
+   </tr>
+   <tr>
+     <td class="structureleft">
+       <span style="font-family:monospace; margin-top:145px;font-size:36px;font-weight:bold" class = "center" id="left_word2"></span>
+     </td>
+     <td class="structureright">
+       <span style="font-family:monospace; margin-top:145px;font-size:36px;font-weight:bold" class = "center" id="right_word2"></span>
+     </td>
+   </tr>
+   <tr>
+     <td>
+       <p class = "buttonstructure" id="s2"> S </p>
+     </td>
+     <td>
+       <p class = "buttonstructure" id="l2"> L </p>
+     </td>
+   </tr>
+ </table>
+ </div>
+
+   <div class="err">
+     <br>
+     <p>
+      You've pressed the wrong word! Be careful! In the real experiment, pressing the illegal continuation will cause you to go on to the next task. Try again.
+     </p>
+   </div>
+
+   <div id="ex_question_error2">
+     <br>
+     <p>
+      You've pressed the wrong answer! Try again, and be careful!
+     </p>
+   </div>
+
+</div>
+
 <div class="slide" id="almost">
 
   <h3>Let's Get Started!</h3>
   <p>Great job! Now we can really get started.</p>
-  <p><strong>To reiterate:</strong> On the following pages, you will be asked to press the spacebar to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which corresponds to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
+  <p><strong>To reiterate:</strong> On the following pages, you will be asked to press SPACE to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, the first pair will always be a real word and an "x-x-x". Press the key which corresponds to the real word (either the [s] key or the [l] key)- that is, NOT the 'x-x-x'. Then, for each following pair of words on the screen, please select the word that grammatically continues the sentence you are currently reading.</p>
   <p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
   <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
 
   <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10mins. In this section, you will not get any hints, and if you continue a sentence ungrammatically, you will be taken to the start of the next sentence. Please pay attention!</p>
 
-  <p> <strong> Press the spacebar to continue! </strong> </p>
+  <p> <strong> Press SPACE to continue! </strong> </p>
 
 </div>
 
@@ -170,7 +235,7 @@
 
     <div id = "stimuli">
 
-      <p class = "instructions" id="new_trial_instructions"> Press the spacebar to begin! </p>
+      <p class = "instructions" id="new_trial_instructions"> Press SPACE to begin! </p>
 
       <div class="new_correct">
         <br>
