--- a/experiments/2_Maze_Neutrality/experiment/experiment.html
+++ b/experiments/2_Maze_Neutrality/experiment/experiment.html
@@ -80,7 +80,7 @@
 
     <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
 
-    <p>If you're a bit confused, don't worry - we will start with an example!</p>
+    <p>If you're a bit confused, don't worry - we will start with two examples!</p>
     <p> <strong> Press SPACE to continue! </strong> </p>
 
 
