pre-pilot updates

--- a/experiments/2_Maze_Neutrality/experiment/experiment.html
+++ b/experiments/2_Maze_Neutrality/experiment/experiment.html
@@ -39,13 +39,12 @@
     <!-- <img src="../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img> -->
     <p id="cocolab">Stanford Linguistics</p>
     <p id="instruct-text">
-      In this experiment, you will read 20 sentence pairs word-by-word. You will have to proceed through the sentence by pressing on your keyboard, indicating which of the two words presented to you constitutes a grammatical continuation of the sentence. Finally, for each sentence, answer a short question.
-      You will also be asked to complete a short personality test. Please pay attention, thanks!<br>
+      In this experiment, you will read 20 sentence pairs word-by-word. You will proceed through the sentence by pressing on your keyboard to indicate which of the two words is a good continuation of the sentence. Finally, for each sentence, answer a short question.
+      You will also be asked to complete a short personality test. Please pay attention, thanks!<br><br>
       <strong>Please note that this experiment cannot be completed in the FireFox browser.</strong>
     </p>
-    <input id="start_button" type="button" class="button" value="Start Experiment">
 
-    <p class="left">
+    <p class="left" style="font-size: 80%">
       <strong><br>
       LEGAL INFORMATION</strong>:<br>
       <br>
@@ -69,13 +68,15 @@
       <br>
       If you agree to participate, please proceed to the study tasks.
     </p>
+
+    <input id="start_button" type="button" class="button" value="Start Experiment">
   </div>
 
 
   <div class="slide" id="instructions">
 
 		<h3>Instructions</h3>
-    <p>On the following pages, you will be asked to press SPACE to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [s] and [l] on your keyboard. In these sentences, one word will be the next word in the sentence, and the other will not. Select the word that continues the sentence by pressing the key which corresponds to the word that continues the sentence.</p>
+    <p>On the following pages, you will be asked to press SPACE to start a sentence. Once you do, you will see a pair of words, corresponding to the keys [S] and [L] on your keyboard. In these sentences, one word will be the next word in the sentence, and the other will not. Select the word that continues the sentence by pressing the key which corresponds to the word that continues the sentence.</p>
 		<p>Once you've read the sentence, please answer the yes/no question that will appear on the screen.</p>
 
     <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
@@ -228,7 +229,7 @@
 
   <p>Place your left index finder on the S key. Place your right index finger on the L key. </p> <br><br> <img src="keyboard_example.png" alt="keyboard_example" width="500" height="300">
 
-  <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10mins. In this section, you will not get any hints, and if you continue a sentence incorrectly, you will be taken to the start of the next sentence. Please pay attention!</p>
+  <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 10 minutes. In this section, you will not get any hints, and if you continue a sentence incorrectly, you will be taken to the start of the next sentence. Please pay attention!</p>
 
   <p> <strong> Press SPACE to continue! </strong> </p>
 
