--- a/experiments/3_Production/experiment/experiment.html
+++ b/experiments/3_Production/experiment/experiment.html
@@ -23,7 +23,7 @@
   <link href="css/local-style.css" rel="stylesheet" type="text/css">
 
     <!-- experiment file -->
-    <script src="stimuli_creation/reading_stims.js"></script>
+    <script src="stimuli_creation/prod_stims_test.js"></script>
     <script src="stimuli_creation/example_stims.js"></script>
     <script type="text/javascript">
       var CONDITION = 1;
@@ -119,8 +119,9 @@
     <div id="comprehension-question">
 
 			<p id="comprehension-question-q" class="question"></p>
-      <input type="button" value="Yes" id="test-response-1" class="response-buttons button">
-      <input type="button" value="No" id="test-response-2" class="response-buttons button">
+      <input type="button" value="button1" id="choice-1" class="response-buttons button">
+      <input type="button" value="button2" id="choice-2" class="response-buttons button">
+      <input type="button" value="button3" id="choice-3" class="response-buttons button">
 		</div>
 
 
