new filler stims

--- a/experiments/3_Production/experiment/experiment.html
+++ b/experiments/3_Production/experiment/experiment.html
@@ -39,7 +39,7 @@
     <!-- <img src="../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img> -->
     <p id="cocolab">Stanford Linguistics</p>
     <p id="instruct-text">
-      In this experiment, you will read 20 sentence pairs word-by-word and for each sentence, answer a short question.
+      In this experiment, you will read 100 sentences, each of which is missing a word. Your task is to complete the sentence using one of the three options provided.
       You will also be asked to complete a short personality test. Please pay attention, thanks!<br>
       <strong>Please note that this experiment cannot be completed in the FireFox browser.</strong>
     </p>
@@ -75,7 +75,7 @@
   <div class="slide" id="instructions">
 
 		<h3>Instructions</h3>
-    <p>On the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word that you feel best completes the sentence.</p>
+    <p>On the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word or words that <b>you feel</b> best completes the sentence.</p>
 
     <p>Let's start with an example!</p>
 
@@ -92,9 +92,9 @@
     <div id="comprehension-question-example">
 
 			<p id="comprehension-question-q-example" class="question"></p>
-      <input type="button" value="teacher" id="test-response-1-example" class="response-buttons button">
-      <input type="button" value="table" id="test-response-2-example" class="response-buttons button">
-      <input type="button" value="talking" id="test-response-3-example" class="response-buttons button">
+      <input type="button" value="shop" id="test-response-1-example" class="response-buttons button">
+      <input type="button" value="hiking" id="test-response-2-example" class="response-buttons button">
+      <input type="button" value="reading" id="test-response-3-example" class="response-buttons button">
 		</div>
     <br>
     <div class="invisible_err" style="display: block;" id="example_err_1">Please select the correct answer to continue.</div>
@@ -104,7 +104,7 @@
 
   <h3>Let's Get Started!</h3>
   <p>Great job! Now we can really get going.</p>
-  <p><strong>To reiterate:</strong> on the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word that you feel best completes the sentence.</p>
+  <p><strong>To reiterate:</strong> on the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word or words that <b>you feel</b> best completes the sentence.</p>
 
   <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 15mins.</p>
 
