ratio of 2-options

--- a/experiments/3_Production/experiment/experiment.html
+++ b/experiments/3_Production/experiment/experiment.html
@@ -75,7 +75,7 @@
   <div class="slide" id="instructions">
 
 		<h3>Instructions</h3>
-    <p>On the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word or words that <b>you feel</b> best completes the sentence.</p>
+    <p>On the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word or words that you feel best completes the sentence.</p>
 
     <p>Let's start with an example!</p>
 
@@ -104,7 +104,7 @@
 
   <h3>Let's Get Started!</h3>
   <p>Great job! Now we can really get going.</p>
-  <p><strong>To reiterate:</strong> on the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word or words that <b>you feel</b> best completes the sentence.</p>
+  <p><strong>To reiterate:</strong> on the following pages, you will always see a sentence which is missing a word, indicated by a blank line. Please select the word or words that you feel best completes the sentence.</p>
 
   <p><strong>Important</strong>: Please try to complete the experiment in one session without any interruptions. It should take at most 15mins.</p>
 
