update start winter quarter

--- a/results/final/papineau_qp1_norming_supplementary.html
+++ b/results/final/papineau_qp1_norming_supplementary.html
@@ -271,12 +271,12 @@ This document contains supplementary material related to my first Qualifying Pap
 <p>A link to the experiment can be found <a href="https://branpap.github.io/gender_processing/experiments/norming_study_one/experiment.html">here</a>, and is available for the keen reader to click through; results are not stored in any way.</p>
 <p>Participants were presented with 39 sentence frames of the structure “Someone is a [role title]”, and were asked to indicate on a seven-point Likert scale how likely they thought it was that the ‘someone’ in question was male or female. The Likert scales were randomized between participants with regard to which end of the scale represented a male response. In each sentence, participants were presented with one of 39 role titles in one of its gendered permutations, such that no participant saw the same lexeme multiple times with different gender markings. All participants saw 13 items of each gender (male/female/neutral).</p>
 <p>Role titles were selected from a variety of online guides on avoiding gendered language in English. Of the 39 role titles included, 11 made binary gender distinctions between male and female forms (e.g. <em>villain</em> vs. <em>villainess</em>), while the remaining 28 make ternary gender distinctions with an additional neutral manifestation (e.g. <em>congressman</em> vs. <em>congresswoman</em> vs. <em>congressperson</em>). The norming items are presented in the table below.</p>
-<div id="hetwmchoha" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="ywhlvupqwz" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#hetwmchoha .gt_table {
+#ywhlvupqwz .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -301,7 +301,7 @@ This document contains supplementary material related to my first Qualifying Pap
   border-left-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_heading {
+#ywhlvupqwz .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -313,7 +313,7 @@ This document contains supplementary material related to my first Qualifying Pap
   border-right-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_title {
+#ywhlvupqwz .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -323,7 +323,7 @@ This document contains supplementary material related to my first Qualifying Pap
   border-bottom-width: 0;
 }
 
-#hetwmchoha .gt_subtitle {
+#ywhlvupqwz .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -333,13 +333,13 @@ This document contains supplementary material related to my first Qualifying Pap
   border-top-width: 0;
 }
 
-#hetwmchoha .gt_bottom_border {
+#ywhlvupqwz .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_col_headings {
+#ywhlvupqwz .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -354,7 +354,7 @@ This document contains supplementary material related to my first Qualifying Pap
   border-right-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_col_heading {
+#ywhlvupqwz .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -374,7 +374,7 @@ This document contains supplementary material related to my first Qualifying Pap
   overflow-x: hidden;
 }
 
-#hetwmchoha .gt_column_spanner_outer {
+#ywhlvupqwz .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -386,15 +386,15 @@ This document contains supplementary material related to my first Qualifying Pap
   padding-right: 4px;
 }
 
-#hetwmchoha .gt_column_spanner_outer:first-child {
+#ywhlvupqwz .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hetwmchoha .gt_column_spanner_outer:last-child {
+#ywhlvupqwz .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hetwmchoha .gt_column_spanner {
+#ywhlvupqwz .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -406,7 +406,7 @@ This document contains supplementary material related to my first Qualifying Pap
   width: 100%;
 }
 
-#hetwmchoha .gt_group_heading {
+#ywhlvupqwz .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -428,7 +428,7 @@ This document contains supplementary material related to my first Qualifying Pap
   vertical-align: middle;
 }
 
-#hetwmchoha .gt_empty_group_heading {
+#ywhlvupqwz .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -443,15 +443,15 @@ This document contains supplementary material related to my first Qualifying Pap
   vertical-align: middle;
 }
 
-#hetwmchoha .gt_from_md > :first-child {
+#ywhlvupqwz .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hetwmchoha .gt_from_md > :last-child {
+#ywhlvupqwz .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hetwmchoha .gt_row {
+#ywhlvupqwz .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -470,7 +470,7 @@ This document contains supplementary material related to my first Qualifying Pap
   overflow-x: hidden;
 }
 
-#hetwmchoha .gt_stub {
+#ywhlvupqwz .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -482,7 +482,7 @@ This document contains supplementary material related to my first Qualifying Pap
   padding-left: 12px;
 }
 
-#hetwmchoha .gt_summary_row {
+#ywhlvupqwz .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -492,7 +492,7 @@ This document contains supplementary material related to my first Qualifying Pap
   padding-right: 5px;
 }
 
-#hetwmchoha .gt_first_summary_row {
+#ywhlvupqwz .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -502,7 +502,7 @@ This document contains supplementary material related to my first Qualifying Pap
   border-top-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_grand_summary_row {
+#ywhlvupqwz .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -512,7 +512,7 @@ This document contains supplementary material related to my first Qualifying Pap
   padding-right: 5px;
 }
 
-#hetwmchoha .gt_first_grand_summary_row {
+#ywhlvupqwz .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -522,11 +522,11 @@ This document contains supplementary material related to my first Qualifying Pap
   border-top-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_striped {
+#ywhlvupqwz .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hetwmchoha .gt_table_body {
+#ywhlvupqwz .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -535,7 +535,7 @@ This document contains supplementary material related to my first Qualifying Pap
   border-bottom-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_footnotes {
+#ywhlvupqwz .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -549,13 +549,13 @@ This document contains supplementary material related to my first Qualifying Pap
   border-right-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_footnote {
+#ywhlvupqwz .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#hetwmchoha .gt_sourcenotes {
+#ywhlvupqwz .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -569,41 +569,41 @@ This document contains supplementary material related to my first Qualifying Pap
   border-right-color: #D3D3D3;
 }
 
-#hetwmchoha .gt_sourcenote {
+#ywhlvupqwz .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#hetwmchoha .gt_left {
+#ywhlvupqwz .gt_left {
   text-align: left;
 }
 
-#hetwmchoha .gt_center {
+#ywhlvupqwz .gt_center {
   text-align: center;
 }
 
-#hetwmchoha .gt_right {
+#ywhlvupqwz .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hetwmchoha .gt_font_normal {
+#ywhlvupqwz .gt_font_normal {
   font-weight: normal;
 }
 
-#hetwmchoha .gt_font_bold {
+#ywhlvupqwz .gt_font_bold {
   font-weight: bold;
 }
 
-#hetwmchoha .gt_font_italic {
+#ywhlvupqwz .gt_font_italic {
   font-style: italic;
 }
 
-#hetwmchoha .gt_super {
+#ywhlvupqwz .gt_super {
   font-size: 65%;
 }
 
-#hetwmchoha .gt_footnote_marks {
+#ywhlvupqwz .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
